# CM-LINUX-K25-github

./: README.md
day-1-makefile/Homework/: CMakeLists.txt  bstrutils.c  main.c  program  strutils.h
day-2-filesystem/Homework/: CMakeLists.txt  filestat  filestat.c  test.txt
